--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,2 +1,10 @@
 /* This file is for your main application css. */
 @import "bootstrap";
+
+.complete {
+    margin-left: 5px;
+}
+
+.time {
+    
+}
