--- a/lib/tasktracker_spa_web/templates/layout/app.html.eex
+++ b/lib/tasktracker_spa_web/templates/layout/app.html.eex
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Hello Test!</title>
+    <title>Lavender Software</title>
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
   </head>
 
